# pump-xeris

./: .gitignore  BALANCE_FIX_DEPLOYMENT_INSTRUCTIONS.md  BALANCE_FIX_SUMMARY.md  COMPLETE_VERIFICATION.md  Dockerfile  FEATURES_SUMMARY.md  FINAL_BALANCE_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  RAILWAY_DEPLOYMENT.md  ULTRA_PERFORMANCE.md  railway.json  railway.toml  start.sh  test_result.md
.emergent/: emergent.yml
.github/workflows/: build-contract.yml  deploy.yml
backend/: casino_math.py  connect_oracle.py  fix_engine.py  fix_port.py  oracle.js  package-lock.json  package.json  patch_math.py  railway.json  requirements-railway.txt  server.py  standard_math.py  start.sh
backend/tests/: test_crash_game_api.py  test_socketio_game_loop.py
frontend/: .env  craco.config.js  esports_patch.py  fix_all.py  fix_cashout.py  fix_history.py  fix_lint.py  fix_rocket_drag.py  fix_stats.py  fix_stutter.py  link_backend.py  package.json  remove_badge.py  solpump_clone.py  wipe_dollars.py
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: BettingPanel.jsx  Chat.jsx  GameHistory.jsx  Leaderboard.jsx  LiveBets.jsx  RocketGame.jsx  UserStats.jsx
frontend/src/mock/: gameData.js
frontend/src/pages/: CrashGame.jsx  RocketGamePage.jsx  RocketGamePage_restored.jsx
memory/: PRD.md
smart-contract/: Anchor.toml
smart-contract/programs/xeris_crash/: Cargo.toml
smart-contract/programs/xeris_crash/src/: lib.rs
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
