[package]
name = "xeris_crash"
version = "0.1.0"
description = "Xeris.Pump Crash Game Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xeris_crash"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
